--- a/index.html
+++ b/index.html
@@ -10,12 +10,10 @@
 <body>
     <h1>チームメンバー紹介</h1>
     <ul>
-<<<<<<< HEAD
-        <li>山口桐和　趣味　筋トレ</li>
-=======
+        
         <li>メンバー</li>
         <li>山下泰靖:好きな食べ物はパスタ</li>
->>>>>>> b7d9667e47ee3985b02eb56386705e8178ae0370
+        <li>山口桐和:趣味は筋トレ</li>
     </ul>
 </body>
 
